import "client.comm.proto";
package client;

// 道具
message prop_secret_place {
    required uint32 id      = 1;  // Id
    required uint32 num     = 2;  // 个数
    required uint32 quality = 3;  // 品质
}

// 寻宝次数
message explore_secret_place_req {
    required uint32      place_id    = 1;  // 秘境的Id
    required uint32      explore_num = 2;  // 寻宝的次数 
    optional server_head svr_head = 1000; 
}

// 寻宝回复
message explore_secret_place_rsp {
    required uint32            place_id = 1; // 秘境Id
    repeated prop_secret_place psp      = 2; // 获得的道具
}

// 上次寻宝结果请求
message last_explore_secret_place_req {
    required uint32      unixtime = 1;
    optional server_head svr_head = 1000;
}

// 上次寻宝结果回复
message last_explore_secret_place_rsp {
    required uint32            place_id = 1; // 秘境Id
    repeated prop_secret_place psp      = 2; // 获得的道具
}

// 其他人获得的极品请求
message broadcast_explore_list_req {
    required uint32      unixtime = 1;
    optional server_head svr_head = 1000;
}

message explore_update {
    required uint32 role_id       = 1;
    required uint32 time          = 2;
    required uint32 place_id      = 3;
    required uint32 goods_id      = 4;
    required uint32 goods_num     = 5;
    required uint32 goods_quality = 6;
}

// 其他人获得的极品回复
message broadcast_explore_list_rsp {
    repeated explore_update eu = 1;
}

////////////////////////////////////////////////////////////

// 更新玩家获得的物品
message explore_update_list {
    repeated explore_update eu       = 1;
    optional server_head    svr_head = 1000;
}
